[metadata]
name = mlm-bias
version = 0.1.0
author = Rahul Zalkikar
author_email = rayzck9@gmail.com
description = Bias Evaluation Methods for Masked Language Models implemented in PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zalkikar/mlm-bias
project_urls =
    Bug Tracker = https://github.com/zalkikar/mlm-bias/issues
classifiers =
     Intended Audience :: Developers
     Intended Audience :: Science/Research
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Topic :: Scientific/Engineering :: Artificial Intelligence, Computational Social Science, Masked Language Models

[options]
packages = find:
python_requires = >=3.6