[metadata]
name = mlm-bias
version = 0.1.6
author = Rahul Zalkikar
author_email = rayzck9@gmail.com
description = Bias Evaluation Methods for Masked Language Models implemented in PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zalkikar/mlm-bias
project_urls =
    Bug Tracker = https://github.com/zalkikar/mlm-bias/issues
classifiers =
     Intended Audience :: Developers
     Intended Audience :: Science/Research
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.8, <3.11